<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background_color"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/black"
        android:gravity="center"
        android:text="@string/brazilian_music"
        android:textColor="@color/text_color"
        android:textSize="30sp"
        android:textStyle="bold" />

    <android.support.v7.widget.CardView
        style="@style/CardStyle"
        card_view:cardBackgroundColor="@color/main_screen_card_color"
        card_view:cardCornerRadius="10dp">

        <TextView
            android:id="@+id/samba_de_gafieira"
            style="@style/CategoryStyle"
            android:text="@string/samba_de_gafieira" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        style="@style/CardStyle"
        card_view:cardBackgroundColor="@color/main_screen_card_color"
        card_view:cardCornerRadius="10dp">

        <TextView
            android:id="@+id/sertanejo"
            style="@style/CategoryStyle"
            android:text="@string/sertanejo" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        style="@style/CardStyle"
        card_view:cardBackgroundColor="@color/main_screen_card_color"
        card_view:cardCornerRadius="10dp">

        <TextView
            android:id="@+id/forro"
            style="@style/CategoryStyle"
            android:text="@string/forro" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        style="@style/CardStyle"
        android:layout_marginBottom="20dp"
        card_view:cardBackgroundColor="@color/main_screen_card_color"
        card_view:cardCornerRadius="10dp">

        <TextView
            android:id="@+id/capoeira"
            style="@style/CategoryStyle"
            android:text="@string/capoeira" />
    </android.support.v7.widget.CardView>
</LinearLayout>

